# rustls-bench-app

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  flake.nix  readme.md
.github/workflows/: ansible-lint.yml  rust.yml
ansible/: .ansible-lint-ignore  inventory.ini  playbook.yml  readme.md  secrets.example.yml
ansible/roles/bench-app-service/handlers/: main.yml
ansible/roles/bench-app-service/tasks/: main.yml
ansible/roles/bench-app-service/templates/: config.json
ansible/roles/bench_app_service/handlers/: main.yml
ansible/roles/bench_app_service/tasks/: main.yml
ansible/roles/bench_app_service/templates/: config.json.j2
ansible/roles/cpufreq/files/: set-scaling-governor.service  set-scaling-governor.sh
ansible/roles/cpufreq/tasks/: main.yml
ansible/roles/deploy/tasks/: main.yml
ansible/roles/deploy/templates/: ci-bench-runner.service  config.json
ansible/roles/nginx/tasks/: main.yml
ansible/roles/nginx/templates/: hostname.conf
ansible/roles/rustup/tasks/: main.yml
ci-bench-runner/: Cargo.toml  build.rs  readme.md
ci-bench-runner/migrations/: 0_create.sql  1_add_memory.sql
ci-bench-runner/src/: bencher_dev.rs  db.rs  event_queue.rs  github.rs  lib.rs  main.rs  runner.rs
ci-bench-runner/src/job/: bench_main.rs  bench_pr.rs  bencher.rs  mod.rs
ci-bench-runner/src/test/: mod.rs
ci-bench-runner/src/test/data/api_payloads/: app_installation.json  create_comment.json  pull_request.json
ci-bench-runner/src/test/data/callgrind_outputs/: sample
ci-bench-runner/src/test/data/criterion_outputs/: estimates.json
ci-bench-runner/src/test/data/webhook_payloads/: issue_comment.json  issue_comment_without_pr.json  pull_request_opened.json  pull_request_review.json  pull_request_synchronize.json  push.json
ci-bench-runner/templates/: comparison_error_comment.md  comparison_success_comment.md  macros.md
