[package]
name = "ci-bench-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
hex = "0.4.3"
hmac = "0.12.1"
hyper = { version = "0.14.27", default-features = false }
jsonwebtoken = "9.1.0"
# TODO: replace by a crates.io version once they publish it
octocrab = { git = "https://github.com/XAMPPRocky/octocrab.git" }
sentry = { version = "0.31.7", features = ["tracing", "ureq", "rustls"], default-features = false }
sentry-tracing = "0.31.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "macros", "time", "migrate"], default-features = false }
tempfile = "3.8.0"
time = { version = "0.3.29", features = ["formatting", "serde"] }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
ctor = "0.2.5"
reqwest = "0.11.22"
wiremock = "0.5.19"
